--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,7 +18,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <title>Expense Tracker</title>
+    <title>Petrol</title>
   </head>
   <body>
     <div id="root"></div>
